fix: correct the arrows-buttons on Firefox

--- a/css/index.css
+++ b/css/index.css
@@ -121,6 +121,7 @@
   -webkit-box-flex: 0;
       -ms-flex: 0 0 42px;
           flex: 0 0 42px;
+  width: 42px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
