--- a/scss/modules/_modals.scss
+++ b/scss/modules/_modals.scss
@@ -53,6 +53,7 @@
           flex: 0 0 42px;
           a {
             flex: 0 0 42px;
+            width: 42px;
             display: flex;
             justify-content: center;
             cursor: pointer;
